ecmascript/parser/tests/test262-error-references/fail/38816d56f582672f.js.stderr
error: Cannot assign to this
 --> $DIR/tests/test262-parser/fail/38816d56f582672f.js:1:1
  |
1 | [v] += ary
  | ^^^

